[package]
name = "bilibili-online-rss"
version = "0.1.0"
edition = "2021"
description = "A server to convert Bilibili online page to RSS content, filtered by a blacklist. "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["http1", "http2", "server"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rss = {version = "2.0", features = ["validation"]}
log = "0.4"
env_logger = "0.10"
clap = { version = "4.1", features = ["derive"] }
